--- a/qss/veles.qss
+++ b/qss/veles.qss
@@ -4,6 +4,12 @@ QWidget
     background-color: #323232;
 }
 
+QWidget:disabled
+{
+    color: #414141;
+    background-color: #323232;
+}
+
 QCheckBox::indicator:checked
 {
     color: #b1b1b1;
@@ -68,6 +74,13 @@ QPushButton
     color: #ffffff;
     background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
     border-width: 1px;
+    border-color: #1e1e1e;
+}
+
+QPushButton:disabled
+{
+    color: #ffffff;
+    color: #565656;
     border-color: #1e1e1e;
 }
 
