--- a/qss/veles.qss
+++ b/qss/veles.qss
@@ -79,9 +79,8 @@ QPushButton
 
 QPushButton:disabled
 {
-    color: #ffffff;
     color: #565656;
-    border-color: #1e1e1e;
+    background-color: grey;
 }
 
 QProgressBar
@@ -111,98 +110,98 @@ QTabBar::tab
 
 QScrollBar:horizontal 
 {
-     border: 1px solid #222222;
-     background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0.0 #121212, stop: 0.2 #282828, stop: 1 #484848);
-     height: 7px;
-     margin: 0px 16px 0 16px;
+    border: 1px solid #222222;
+    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0.0 #121212, stop: 0.2 #282828, stop: 1 #484848);
+    height: 7px;
+    margin: 0px 16px 0 16px;
 }
 
 QScrollBar::handle:horizontal
 {
-      background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 0.5 #d7801a, stop: 1 #ffa02f);
-      min-height: 20px;
-      border-radius: 2px;
+    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 0.5 #d7801a, stop: 1 #ffa02f);
+    min-height: 20px;
+    border-radius: 2px;
 }
 
 QScrollBar::add-line:horizontal 
 {
-      border: 1px solid #1b1b19;
-      border-radius: 2px;
-      background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 1 #d7801a);
-      width: 14px;
-      subcontrol-position: right;
-      subcontrol-origin: margin;
+    border: 1px solid #1b1b19;
+    border-radius: 2px;
+    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 1 #d7801a);
+    width: 14px;
+    subcontrol-position: right;
+    subcontrol-origin: margin;
 }
 
 QScrollBar::sub-line:horizontal 
 {
-      border: 1px solid #1b1b19;
-      border-radius: 2px;
-      background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 1 #d7801a);
-      width: 14px;
-     subcontrol-position: left;
-     subcontrol-origin: margin;
+    border: 1px solid #1b1b19;
+    border-radius: 2px;
+    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 1 #d7801a);
+    width: 14px;
+    subcontrol-position: left;
+    subcontrol-origin: margin;
 }
 
 QScrollBar::right-arrow:horizontal, QScrollBar::left-arrow:horizontal
 {
-      border: 1px solid black;
-      width: 1px;
-      height: 1px;
-      background: white;
+    border: 1px solid black;
+    width: 1px;
+    height: 1px;
+    background: white;
 }
 
 QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
 {
-      background: none;
+    background: none;
 }
 
 QScrollBar:vertical
 {
-      background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0.0 #121212, stop: 0.2 #282828, stop: 1 #484848);
-      width: 7px;
-      margin: 16px 0 16px 0;
-      border: 1px solid #222222;
+    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0.0 #121212, stop: 0.2 #282828, stop: 1 #484848);
+    width: 7px;
+    margin: 16px 0 16px 0;
+    border: 1px solid #222222;
 }
 
 QScrollBar::handle:vertical
 {
-      background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 0.5 #d7801a, stop: 1 #ffa02f);
-      min-height: 20px;
-      border-radius: 2px;
+    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 0.5 #d7801a, stop: 1 #ffa02f);
+    min-height: 20px;
+    border-radius: 2px;
 }
 
 QScrollBar::add-line:vertical
 {
-      border: 1px solid #1b1b19;
-      border-radius: 2px;
-      background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #d7801a);
-      height: 14px;
-      subcontrol-position: bottom;
-      subcontrol-origin: margin;
+    border: 1px solid #1b1b19;
+    border-radius: 2px;
+    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #d7801a);
+    height: 14px;
+    subcontrol-position: bottom;
+    subcontrol-origin: margin;
 }
 
 QScrollBar::sub-line:vertical
 {
-      border: 1px solid #1b1b19;
-      border-radius: 2px;
-      background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #d7801a, stop: 1 #ffa02f);
-      height: 14px;
-      subcontrol-position: top;
-      subcontrol-origin: margin;
+    border: 1px solid #1b1b19;
+    border-radius: 2px;
+    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #d7801a, stop: 1 #ffa02f);
+    height: 14px;
+    subcontrol-position: top;
+    subcontrol-origin: margin;
 }
 
 QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical
 {
-      border: 1px solid black;
-      width: 1px;
-      height: 1px;
-      background: white;
+    border: 1px solid black;
+    width: 1px;
+    height: 1px;
+    background: white;
 }
 
 QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
 {
-      background: none;
+    background: none;
 }
 
 QTextEdit
