--- a/qss/orange_fix.qss
+++ b/qss/orange_fix.qss
@@ -2,10 +2,6 @@ QTableView
 {
      gridline-color: #646464;
 }
-QTreeView::item 
-{
-    color: #FFFFFF;
-}
 
 QToolTip
 {
@@ -15,22 +11,21 @@ QToolTip
      border-radius: 3px;
      opacity: 100;
 }
+
 QWidget
 {
     color: #FFFFFF;
     background-color: #323232;
 }
 
-QWidget:item:hover
+QWidget:hover
 {
-    background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #ca0619);
-    color: #000000;
+    border: 1px solid #ca0619;
 }
 
-QLineEdit:hover
+QWidget:item:hover
 {
-    background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #ca0619);
-    color: #000000;
+    border: 1px solid #ca0619;
 }
 
 QWidget:item:selected
@@ -82,7 +77,7 @@ QMenu::item:selected
 
 QWidget:disabled
 {
-    color: #9c9c9c;
+    color: #323232;
     background-color: #323232;
 }
 
@@ -109,16 +104,6 @@ QPushButton
 {
     color: #ffffff;
     background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
-    border-width: 1px;
-    border-color: #1e1e1e;
-    border-style: solid;
-    border-radius: 6;
-    padding-top: 3px;
-    padding-bottom: 3px;
-	padding-left: 6px;
-	padding-right:6px;
-    font-size: 12px;
-	/*min-width: 75px;*/
 }
 
 QPushButton:pressed
@@ -128,28 +113,33 @@ QPushButton:pressed
 
 QPushButton:checked
 {
-    background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #2d2d2d, stop: 0.1 #2b2b2b, stop: 0.5 #292929, stop: 0.9 #282828, stop: 1 #252525);
+    background-color: #2d2d2d;
 }
+
 QGroupBox:focus
 {
 	border: 2px solid QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #d7801a);
 }
+
 QTextEdit:focus
 {
     border: 2px solid QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #d7801a);
 }
+
 QScrollBar:horizontal {
      border: 1px solid #222222;
      background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0.0 #121212, stop: 0.2 #282828, stop: 1 #484848);
      height: 7px;
      margin: 0px 16px 0 16px;
 }
+
 QScrollBar::handle:horizontal
 {
       background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 0.5 #d7801a, stop: 1 #ffa02f);
       min-height: 20px;
       border-radius: 2px;
 }
+
 QScrollBar::add-line:horizontal {
       border: 1px solid #1b1b19;
       border-radius: 2px;
@@ -158,6 +148,7 @@ QScrollBar::add-line:horizontal {
       subcontrol-position: right;
       subcontrol-origin: margin;
 }
+
 QScrollBar::sub-line:horizontal {
       border: 1px solid #1b1b19;
       border-radius: 2px;
@@ -166,6 +157,7 @@ QScrollBar::sub-line:horizontal {
      subcontrol-position: left;
      subcontrol-origin: margin;
 }
+
 QScrollBar::right-arrow:horizontal, QScrollBar::left-arrow:horizontal
 {
       border: 1px solid black;
@@ -173,10 +165,12 @@ QScrollBar::right-arrow:horizontal, QScrollBar::left-arrow:horizontal
       height: 1px;
       background: white;
 }
+
 QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
 {
       background: none;
 }
+
 QScrollBar:vertical
 {
       background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0.0 #121212, stop: 0.2 #282828, stop: 1 #484848);
@@ -184,12 +178,14 @@ QScrollBar:vertical
       margin: 16px 0 16px 0;
       border: 1px solid #222222;
 }
+
 QScrollBar::handle:vertical
 {
       background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 0.5 #d7801a, stop: 1 #ffa02f);
       min-height: 20px;
       border-radius: 2px;
 }
+
 QScrollBar::add-line:vertical
 {
       border: 1px solid #1b1b19;
@@ -199,6 +195,7 @@ QScrollBar::add-line:vertical
       subcontrol-position: bottom;
       subcontrol-origin: margin;
 }
+
 QScrollBar::sub-line:vertical
 {
       border: 1px solid #1b1b19;
@@ -208,6 +205,7 @@ QScrollBar::sub-line:vertical
       subcontrol-position: top;
       subcontrol-origin: margin;
 }
+
 QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical
 {
       border: 1px solid black;
@@ -215,49 +213,53 @@ QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical
       height: 1px;
       background: white;
 }
+
 QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
 {
       background: none;
 }
+
 QTextEdit
 {
     background-color: #242424;
 }
+
 QPlainTextEdit
 {
     background-color: #242424;
 }
+
 QHeaderView::section
 {
-    background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:0 #616161, stop: 0.5 #505050, stop: 0.6 #434343, stop:1 #656565);
     color: white;
-    padding-left: 4px;
-    border: 1px solid #6c6c6c;
+    /*padding-left: 4px;
+    border: 1px solid #6c6c6c;*/
 }
-QCheckBox:disabled
-{
-    color: #414141;
-}
+
 QDockWidget::title
 {
     text-align: center;
     spacing: 3px; /* spacing between items in the tool bar */
     background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:0 #323232, stop: 0.5 #242424, stop:1 #323232);
 }
+
 QDockWidget::close-button, QDockWidget::float-button
 {
     text-align: center;
     spacing: 1px; /* spacing between items in the tool bar */
     background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:0 #323232, stop: 0.5 #242424, stop:1 #323232);
 }
+
 QDockWidget::close-button:hover, QDockWidget::float-button:hover
 {
     background: #242424;
 }
+
 QDockWidget::close-button:pressed, QDockWidget::float-button:pressed
 {
     padding: 1px -1px -1px 1px;
 }
+
 QMainWindow::separator
 {
     background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:0 #161616, stop: 0.5 #151515, stop: 0.6 #212121, stop:1 #343434);
@@ -266,6 +268,7 @@ QMainWindow::separator
     border: 1px solid #4c4c4c;
     spacing: 3px; /* spacing between items in the tool bar */
 }
+
 QMainWindow::separator:hover
 {
     background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:0 #d7801a, stop:0.5 #b56c17 stop:1 #ffa02f);
@@ -274,10 +277,12 @@ QMainWindow::separator:hover
     border: 1px solid #6c6c6c;
     spacing: 3px; /* spacing between items in the tool bar */
 }
+
 QToolBar::handle
 {
      spacing: 3px; /* spacing between items in the tool bar */
 }
+
 QMenu::separator
 {
     height: 2px;
@@ -287,17 +292,20 @@ QMenu::separator
     margin-left: 10px;
     margin-right: 5px;
 }
+
 QProgressBar
 {
     border: 2px solid grey;
     border-radius: 5px;
     text-align: center;
 }
+
 QProgressBar::chunk
 {
     background-color: #d7801a;
     width: 2.15px;
 }
+
 QTabBar::tab {
     color: #b1b1b1;
     border: 1px solid #444;
@@ -309,20 +317,24 @@ QTabBar::tab {
     padding-bottom: 2px;
     margin-right: -1px;
 }
+
 QTabWidget::pane {
     border: 1px solid #444;
     top: 1px;
 }
+
 QTabBar::tab:last
 {
     margin-right: 0; /* the last selected tab has nothing to overlap with on the right */
     border-top-right-radius: 3px;
 }
+
 QTabBar::tab:first:!selected
 {
- margin-left: 0px; /* the last selected tab has nothing to overlap with on the right */
+    margin-left: 0px; /* the last selected tab has nothing to overlap with on the right */
     border-top-left-radius: 3px;
 }
+
 QTabBar::tab:!selected
 {
     color: #b1b1b1;
@@ -330,12 +342,14 @@ QTabBar::tab:!selected
     margin-top: 3px;
     background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #212121, stop:.4 #343434);
 }
+
 QTabBar::tab:selected
 {
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
     margin-bottom: 0px;
 }
+
 QTabBar::tab:!selected:hover
 {
     /*border-top: 2px solid #ffaa00;
@@ -344,12 +358,14 @@ QTabBar::tab:!selected:hover
     border-top-right-radius: 3px;
     background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #212121, stop:0.4 #343434, stop:0.2 #343434, stop:0.1 #ffaa00);
 }
+
 QRadioButton::indicator:checked, QRadioButton::indicator:unchecked{
     color: #b1b1b1;
     background-color: #323232;
     border: 1px solid #b1b1b1;
     border-radius: 6px;
 }
+
 QRadioButton::indicator:checked
 {
     background-color: qradialgradient(
@@ -360,7 +376,50 @@ QRadioButton::indicator:checked
         stop: 0.3 #323232
     );
 }
+
 QRadioButton::indicator
 {
     border-radius: 6px;
 }
+
+QTextEdit
+{
+    background-color: native;
+    color: native;
+    border: native;
+}
+
+QPlainTextEdit
+{
+    background-color: native;
+    color: native;
+    border: native;
+}
+
+/* XDeviceTableView
+{
+    background-color: native;
+    color: native;
+    border: native;
+} */
+
+QCheckBox:disabled
+{
+    color: #414141;
+}
+
+QCheckBox::indicator:unchecked{
+    border: 1px solid #b1b1b1;
+}
+
+QTreeView::item 
+{
+    color: #FFFFFF;
+}
+
+/*QTreeView 
+{
+    background-color: native;
+    color: native;
+    border: native;
+}*/
